# otus_task6

./: CMakeLists.txt  Matrix.h  matrix.cpp  test_matrix.cpp
